--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -18,9 +18,17 @@
             android:icon="@drawable/ic_search_grey_24dp"
             android:title="@string/menu_search" />
         <item
+            android:id="@+id/nav_ready_draft"
+            android:icon="@drawable/ic_assignment_turned_in_grey_24dp"
+            android:title="@string/menu_ready_close" />
+        <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_date_range_grey_24dp"
             android:title="@string/my_schedule" />
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_error_grey_24dp"
+            android:title="@string/menu_about" />
         <item
             android:id="@+id/nav_logout"
             android:icon="@drawable/ic_logout_grey"
