--- a/app/src/main/res/layout/activity_preoutline.xml
+++ b/app/src/main/res/layout/activity_preoutline.xml
@@ -8,100 +8,109 @@
     android:id="@+id/ll_preoutline_draft"
     android:visibility="gone"
     tools:context=".PreoutlineActivity">
-    <TextView
-        android:id="@+id/tv_draft_title"
+    <ScrollView
         android:layout_width="match_parent"
-        android:textAllCaps="true"
-        android:textAlignment="center"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        android:padding="3sp"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tv_draft_content"
-        android:padding="3sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/tv_draft_status"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:paddingEnd="10sp"
-            android:textAlignment="textEnd"
-            android:textAllCaps="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="1sp"
-        android:paddingBottom="2sp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.0"
-            android:gravity="center">
-            <ImageButton
-                android:id="@+id/ib_upvote"
-                android:layout_width="20sp"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_upvote" />
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/tv_draft_upvote"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_draft_title"
+                android:layout_width="match_parent"
+                android:textAllCaps="true"
+                android:textAlignment="center"
                 android:textSize="15sp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2sp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.0"
-            android:gravity="center">
-            <ImageButton
-                android:id="@+id/ib_downvote"
-                android:layout_width="20sp"
-                android:background="@android:color/transparent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_downvote" />
+                android:textStyle="bold"
+                android:padding="3sp"
+                android:layout_height="wrap_content" />
             <TextView
-                android:id="@+id/tv_draft_downvote"
-                android:textSize="15sp"
+                android:id="@+id/tv_draft_content"
+                android:padding="3sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_draft_status"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:paddingEnd="10sp"
+                    android:textAlignment="textEnd"
+                    android:textAllCaps="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="1sp"
+                android:paddingBottom="2sp"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.0"
+                    android:gravity="center">
+                    <ImageButton
+                        android:id="@+id/ib_upvote"
+                        android:layout_width="20sp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_upvote" />
+                    <TextView
+                        android:id="@+id/tv_draft_upvote"
+                        android:layout_width="wrap_content"
+                        android:textSize="15sp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2sp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.0"
+                    android:gravity="center">
+                    <ImageButton
+                        android:id="@+id/ib_downvote"
+                        android:layout_width="20sp"
+                        android:background="@android:color/transparent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_downvote" />
+                    <TextView
+                        android:id="@+id/tv_draft_downvote"
+                        android:textSize="15sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="2sp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.0"
+                    android:gravity="center">
+                    <ImageButton
+                        android:id="@+id/ib_comment"
+                        android:layout_width="20sp"
+                        android:background="@android:color/transparent"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_comment_gray_24dp" />
+                </LinearLayout>
+            </LinearLayout>
+            <View
+                android:layout_marginTop="5sp"
+                android:paddingStart="5sp"
+                android:paddingEnd="5sp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2sp" />
+                android:layout_height="0.5sp"
+                android:background="#A7A7A7"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_approvals"
+                android:layout_marginTop="5sp"
+                android:padding="5sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1.0"
-            android:gravity="center">
-            <ImageButton
-                android:id="@+id/ib_comment"
-                android:layout_width="20sp"
-                android:background="@android:color/transparent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_comment_gray_24dp" />
-        </LinearLayout>
-    </LinearLayout>
-    <View
-        android:layout_marginTop="5sp"
-        android:paddingStart="5sp"
-        android:paddingEnd="5sp"
-        android:layout_width="wrap_content"
-        android:layout_height="0.5sp"
-        android:background="#A7A7A7"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_approvals"
-        android:layout_marginTop="5sp"
-        android:padding="5sp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    </ScrollView>
 </LinearLayout>
