--- a/app/src/main/res/layout/praoutline_layout.xml
+++ b/app/src/main/res/layout/praoutline_layout.xml
@@ -2,104 +2,124 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/white"
+    app:cardCornerRadius="0dp"
     android:id="@+id/cv_praoutline"
     android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="2sp"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/iv_student_preoutline"
-            android:layout_width="60sp"
-            android:layout_height="60sp"
-            android:padding="3sp"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <LinearLayout
+            android:id="@+id/ll_draft_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/tv_preoutline_title"
-                android:textAllCaps="true"
-                android:textStyle="bold"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="2sp"
-                android:textSize="13sp" />
-            <TextView
-                android:id="@+id/tv_preoutline_owner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="2sp"
-                android:textSize="13sp"/>
-            <TextView
-                android:id="@+id/tv_preoutline_date"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="2sp"
-                android:textSize="13sp"/>
+            android:orientation="horizontal">
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dip"
+                android:layout_weight="34"
                 android:layout_height="wrap_content"
-                android:paddingTop="1sp"
-                android:paddingBottom="2sp"
+                android:paddingTop="2sp"
                 android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/iv_student_preoutline"
+                    android:layout_width="60sp"
+                    android:layout_height="60sp"
+                    android:padding="3sp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.0"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="20sp"
-                        android:layout_height="20sp"
-                        android:src="@drawable/ic_upvote" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
                     <TextView
-                        android:id="@+id/tv_preoutline_upvote"
-                        android:layout_width="wrap_content"
-                        android:textSize="15sp"
+                        android:id="@+id/tv_preoutline_title"
+                        android:textAllCaps="true"
+                        android:textStyle="bold"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="2sp" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.0"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="20sp"
-                        android:layout_height="20sp"
-                        android:src="@drawable/ic_downvote" />
+                        android:paddingBottom="2sp"
+                        android:textSize="13sp" />
                     <TextView
-                        android:id="@+id/tv_preoutline_downvote"
-                        android:textSize="15sp"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/tv_preoutline_owner"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="2sp" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1.0"
-                    android:gravity="center">
-                    <ImageView
-                        android:layout_width="20sp"
-                        android:layout_height="20sp"
-                        android:src="@drawable/ic_comment_gray_24dp" />
+                        android:paddingBottom="2sp"
+                        android:textSize="13sp"/>
                     <TextView
-                        android:id="@+id/tv_preoutline_comment"
-                        android:layout_width="wrap_content"
-                        android:textSize="15sp"
+                        android:id="@+id/tv_preoutline_date"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="2sp" />
+                        android:paddingBottom="2sp"
+                        android:textSize="13sp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="1sp"
+                        android:paddingBottom="2sp"
+                        android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1.0"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="20sp"
+                                android:layout_height="20sp"
+                                android:src="@drawable/ic_upvote" />
+                            <TextView
+                                android:id="@+id/tv_preoutline_upvote"
+                                android:layout_width="wrap_content"
+                                android:textSize="15sp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="2sp" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1.0"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="20sp"
+                                android:layout_height="20sp"
+                                android:src="@drawable/ic_downvote" />
+                            <TextView
+                                android:id="@+id/tv_preoutline_downvote"
+                                android:textSize="15sp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="2sp" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1.0"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="20sp"
+                                android:layout_height="20sp"
+                                android:src="@drawable/ic_comment_gray_24dp" />
+                            <TextView
+                                android:id="@+id/tv_preoutline_comment"
+                                android:layout_width="wrap_content"
+                                android:textSize="15sp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="2sp" />
+                        </LinearLayout>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+            <View
+                android:id="@+id/status_view"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_width="0dip"
+                android:background="@color/colorPrimary"/>
         </LinearLayout>
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5sp"
-        android:background="#c0c0c0"
-        android:layout_marginStart="20sp"
-        android:layout_marginEnd="20sp"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5sp"
+            android:layout_below="@id/ll_draft_content"
+            android:background="#c0c0c0"
+            android:layout_marginStart="20sp"
+            android:layout_marginEnd="20sp"/>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
