--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -22,6 +22,10 @@
             android:icon="@drawable/ic_assignment_turned_in_grey_24dp"
             android:title="@string/menu_ready_close" />
         <item
+            android:id="@+id/nav_mail_notif"
+            android:icon="@drawable/ic_mail_outline_black_24dp"
+            android:title="@string/menu_mail_noitf" />
+        <item
             android:id="@+id/nav_schedule"
             android:icon="@drawable/ic_date_range_grey_24dp"
             android:title="@string/my_schedule" />
